Add pagination to allowed books view